# timeslotfinder

./: .gitignore  ARCHITECTURE.md  INSTALL.sh  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TEST_MOCK_MODE.md  auth.py  calendar_api.py  config.example.yaml  config.json  config.py  main.py  pyproject.toml  requirements.txt  setup.py  slot_calculation Kopie.py  slot_calculation.py  test_slots.py  time_utils.py  timeslotfinder.py  ui.py
src/: __init__.py  __main__.py  config.py
src/adapters/: __init__.py  graph_authenticator.py  graph_client.py  mock_calendar_data.json  mock_graph_client.py
src/cli/: app.py
src/domain/: __init__.py  exceptions.py  models.py
src/services/: timeslot_finder.py
tests/: __init__.py  test_domain_models.py  test_slot_calculator.py  test_timeslot_finder_service.py
timeslotfinder/: config.py
timeslotfinder/adapters/: __init__.py  graph_authenticator.py  graph_client.py  mock_graph_client.py
timeslotfinder/cli/: __init__.py  app.py
timeslotfinder/domain/: slot_calculator.py
timeslotfinder/services/: __init__.py
